@@ -1116,4 +1116,5 @@ November 30-?? 2011
 	operation.  Voids segfaults.
 	* Slide TH1I underneath the hood of CBitSpectrumL
 	* Slide TH1S underneath the hood of CBitSpectrumW
+	* Slide a TH1I under the hood of CGamma1DL
 
